syntax = "proto3";



option go_package="./;pb";
option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "SendMsgProto";

package pb;

// Interface exported by the server.
service Message {
  rpc SendMsg(SendMsgReq) returns (SendMsgRep) {}
}

// Points are represented as latitude-longitude pairs in the E7 representation
// (degrees multiplied by 10**7 and rounded to the nearest integer).
// Latitudes should be in the range +/- 90 degrees and longitude should be in
// the range +/- 180 degrees (inclusive).
message SendMsgReq {
  string appid = 1;
  string userid = 2;
  string message = 3;
}

message SendMsgRep {
  int32 code = 1;
  string msg = 2;
}